Ajuste no cálculo da média, adicionando a funcionalidade de remover o último lap e adicionando um novo exemplo (Exemplo03)

--- a/Exemplo01.ipynb
+++ b/Exemplo01.ipynb
@@ -66,9 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medindo codigo rápido repetido diversas vezes:\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Medindo codigo rápido repetido diversas vezes:\")\n",
     "timer.reset()\n",
@@ -76,7 +84,8 @@
     "for i in range(0, 100000):  \n",
     "    fib(10)\n",
     "    timer.lap()\n",
-    "timer.stop()"
+    "timer.stop()\n",
+    "timer.remove_last_lap()"
    ]
   },
   {
@@ -88,9 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo Total: 3.7790486812591553 s\n",
+      "Tempo Medio: 37.79048681259162 µs\n",
+      "Ultima Chamada: 31.232833862304688 µs\n",
+      "Estampa 1 do total: 0h 0m 3s 779ms 48µs\n",
+      "Estampa 2 do total: 00:00:03.0779\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Tempo Total: \" + str( timer.get_time() ) +\" s\")\n",
     "print(\"Tempo Medio: \" + str( timer.get_time(\"average\",\"micro\") ) +\" \\u00B5s\")\n",
@@ -108,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medindo codigo longo/pesado repetido uma vez:\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Medindo codigo longo/pesado repetido uma vez:\")\n",
     "timer.reset()\n",
@@ -128,9 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo Total: 6.223832845687866 s\n",
+      "Tempo Medio: 6223832.845687866 µs\n",
+      "Ultima Chamada: 6223832.845687866 µs\n",
+      "Estampa 1 do total: 0h 0m 6s 223ms 832µs\n",
+      "Estampa 2 do total: 00:00:06.0223\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Tempo Total: \" + str( timer.get_time() ) +\" s\")\n",
     "print(\"Tempo Medio: \" + str( timer.get_time(\"average\",\"micro\") ) +\" \\u00B5s\")\n",
@@ -148,9 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estampa que ignora zeros:\n",
+      "6s 223ms 832µs\n",
+      "06.0223\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Estampa que ignora zeros:\")\n",
     "print( timer.get_stamp(\"total\",\"si\",True) )\n",
