Ajuste no exemplo 3

--- a/Exemplo03.ipynb
+++ b/Exemplo03.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,11 +115,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo Total: 15.012893915176392 s\n",
+      "Tempo Medio: 3.002578783035278 s\n",
+      "Ultima Chamada: 5.005450963973999 s\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Tempo Total: \" + str( timer.get_time() ) +\" s\")\n",
     "print(\"Tempo Medio: \" + str( timer.get_time(\"average\",\"s\") ) +\" s\")\n",
@@ -135,9 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.012893915176392 == 15.012893915176392 = True\n"
+     ]
+    }
+   ],
    "source": [
     "tempo_total = timer.get_time()\n",
     "tempo_total_com_medias = timer.get_time(\"average\",\"s\") * len(lista)\n",
@@ -162,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,9 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo Total: 15.010115623474121 s\n",
+      "Tempo Medio: 3.0020231246948237 s\n",
+      "Ultima Chamada: 5.000699043273926 s\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Tempo Total: \" + str( timer.get_time() ) +\" s\")\n",
     "print(\"Tempo Medio: \" + str( timer.get_time(\"average\",\"s\") ) +\" s\")\n",
@@ -203,9 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.010115623474121 == 15.010115623474118 = False\n"
+     ]
+    }
+   ],
    "source": [
     "tempo_total = timer.get_time()\n",
     "tempo_total_com_medias = timer.get_time(\"average\",\"s\") * len(lista)\n",
