Ajuste no exemplo 03

--- a/Exemplo03.ipynb
+++ b/Exemplo03.ipynb
@@ -124,16 +124,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo Total: 15.012893915176392 s\n",
-      "Tempo Medio: 3.002578783035278 s\n",
-      "Ultima Chamada: 5.005450963973999 s\n"
+      "Tempo Total: 15.016233921051025 s\n",
+      "Tempo Medio: 3.003246784210205 s\n",
+      "Última Chamada: 5.005615234375 s\n"
      ]
     }
    ],
    "source": [
     "print(\"Tempo Total: \" + str( timer.get_time() ) +\" s\")\n",
     "print(\"Tempo Medio: \" + str( timer.get_time(\"average\",\"s\") ) +\" s\")\n",
-    "print(\"Ultima Chamada: \" + str( timer.get_time(\"last\",\"s\") ) +\" s\")"
+    "print(\"Última Chamada: \" + str( timer.get_time(\"last\",\"s\") ) +\" s\")"
    ]
   },
   {
@@ -152,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.012893915176392 == 15.012893915176392 = True\n"
+      "15.016233921051025 == 15.016233921051025 = True\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
    "metadata": {},
    "source": [
     "## Chamando a função com o loop da lista removendo o último lap separado.\n",
-    "<b>ATENÇÃO: </b> A função <u>remove_last_lap()</u> só pode ser chamado apenas 1x e quando estiver no <u>stop()</u>"
+    "<b>ATENÇÃO: </b> A função <u>remove_last_lap()</u> só pode ser chamada apenas 1x e quando estiver no <u>stop()</u>"
    ]
   },
   {
@@ -210,16 +210,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo Total: 15.010115623474121 s\n",
-      "Tempo Medio: 3.0020231246948237 s\n",
-      "Ultima Chamada: 5.000699043273926 s\n"
+      "Tempo Total: 15.013436317443848 s\n",
+      "Tempo Medio: 3.0026872634887694 s\n",
+      "Última Chamada: 5.0049920082092285 s\n"
      ]
     }
    ],
    "source": [
     "print(\"Tempo Total: \" + str( timer.get_time() ) +\" s\")\n",
     "print(\"Tempo Medio: \" + str( timer.get_time(\"average\",\"s\") ) +\" s\")\n",
-    "print(\"Ultima Chamada: \" + str( timer.get_time(\"last\",\"s\") ) +\" s\")"
+    "print(\"Última Chamada: \" + str( timer.get_time(\"last\",\"s\") ) +\" s\")"
    ]
   },
   {
@@ -238,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.010115623474121 == 15.010115623474118 = False\n"
+      "15.013436317443848 == 15.013436317443848 = True\n"
      ]
     }
    ],
